commerce-sales/security.yaml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: "strict-mtls-policy"
  namespace: "commerce-sales"
spec:
  mtls:
    mode: STRICT
