commerce-sales/sales.yaml
##################################################################################################
# sales service
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: sales
  labels:
    app: sales
    service: sales
spec:
  ports:
  - port: 3000
    name: http
  selector:
    app: sales
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sales-v1
  labels:
    app: sales
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sales
      version: v1
  template:
    metadata:
      labels:
        app: sales
        version: v1
    spec:
      serviceAccountName: medisupply-sales
      containers:
      - name: sales
        image: public.ecr.aws/q2b4w2e6/dummies/venta-ms:1.4.0
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "200m"
        readinessProbe:
          httpGet: { path: /health, port: 3000 }
          initialDelaySeconds: 2
          periodSeconds: 5
        livenessProbe:
          httpGet: { path: /health, port: 3000 }
          initialDelaySeconds: 5
          periodSeconds: 10
