commerce-sales/routes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: commerce-sales-route
spec:
  # The name of the Gateway that this route belongs to
  parentRefs:
    - name: medisupply-gateway
      namespace: default
  rules:
    # Sales service routing
    - matches:
        - path:
            type: PathPrefix
            value: /api/v1/sales
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: sales
          port: 3000
